# lab04

./: .appveyor.yml  .term.html.swp  .travis.yml  CMakeCache.txt  README.md  REPORT.md  REPORT0.md  report.html  report.txt  term.html  test.md
_build/: CMakeCache.txt
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
sources/: hello_world.cpp
