cmake_minimum_required(VERSION 3.4)
project(solver)
include_directories(../formatter_ex_lib)
add_subdirectory(../formatter_ex_lib ~/Nikita0042/workspace/projects/lab03/formatter_ex_lib/_build)
include_directories(../solver_lib)
add_subdirectory(../solver_lib ~/Nikita0042/workspace/projects/lab03/solver_lib/_build)
add_executable(solver equation.cpp)
target_link_libraries(solver formatter_ex)
target_link_libraries(solver solver_lib)
